# NARU

./: .editorconfig  .gitignore  CMakeLists.txt  COPYING  README.md
.github/workflows/: c-cpp.yml  eclint.yml
cmake/: gtest.cmake
evaluation/: calc_statistics.rb  evaluate.rb
include/: NARUStdint.h  naru.h  naru_decoder.h  naru_encoder.h  naru_stdint.h
libs/: CMakeLists.txt
libs/BitStream/: CMakeLists.txt
libs/BitStream/include/: bit_stream.h
libs/BitStream/src/: CMakeLists.txt  bit_stream.c
libs/CommandLineParser/: CMakeLists.txt
libs/CommandLineParser/test/: CMakeLists.txt
libs/LPCCalculator/: CMakeLists.txt
libs/LPCCalculator/include/: lpc_calculator.h
libs/LPCCalculator/src/: CMakeLists.txt  lpc_calculator.c
libs/NARUBitStream/include/: NARUBitStream.h
libs/NARUCoder/: CMakeLists.txt
libs/NARUCoder/include/: NARUCoder.h
libs/NARUCoder/src/: NARUCoder.c
libs/NARUInternal/: CMakeLists.txt
libs/NARUInternal/include/: NARUInternal.h
libs/Utils/: CMakeLists.txt
libs/Utils/src/: CMakeLists.txt
libs/Utils/test/: CMakeLists.txt
libs/Utils/test/bit_stream/: main.cpp
libs/Utils/test/command_line_parser/: main.cpp
libs/Utils/test/wav/: main.cpp
libs/Wav/: CMakeLists.txt
libs/Wav/test/: CMakeLists.txt
libs/byte_array/: CMakeLists.txt
libs/byte_array/include/: byte_array.h
libs/command_line_parser/: CMakeLists.txt
libs/command_line_parser/include/: command_line_parser.h
libs/command_line_parser/src/: CMakeLists.txt  command_line_parser.c
libs/lpc_calculator/: CMakeLists.txt
libs/lpc_calculator/include/: lpc_calculator.h
libs/lpc_calculator/src/: CMakeLists.txt  lpc_calculator.c
libs/naru_bit_stream/: CMakeLists.txt
libs/naru_bit_stream/include/: naru_bit_stream.h
libs/naru_bit_stream/src/: CMakeLists.txt  NARUBitStream.c  naru_bit_stream.c
libs/naru_coder/: CMakeLists.txt
libs/naru_coder/include/: NARUCoder.h  naru_coder.h
libs/naru_coder/src/: CMakeLists.txt  naru_coder.c
libs/naru_decoder/: CMakeLists.txt
libs/naru_decoder/include/: naru_decode_processor.h  naru_decoder.h
libs/naru_decoder/src/: CMakeLists.txt  naru_decode_processor.c  naru_decoder.c
libs/naru_encoder/: CMakeLists.txt
libs/naru_encoder/include/: naru_encode_processor.h  naru_encoder.h
libs/naru_encoder/src/: CMakeLists.txt  naru_encode_processor.c  naru_encoder.c
libs/naru_internal/: CMakeLists.txt
libs/naru_internal/include/: NARUUtility.h  naru_filter.h  naru_internal.h  naru_utility.h
libs/naru_internal/src/: CMakeLists.txt  NARUUtility.c  naru_filter.c  naru_utility.c
libs/tmpdir/: CMakeLists.txt
libs/wav/: CMakeLists.txt
libs/wav/include/: wav.h
libs/wav/src/: CMakeLists.txt  wav.c
test/: CMakeLists.txt
test/BitStream/: CMakeLists.txt  bit_stream_test.cpp  byte_array_test.cpp  main.cpp
test/CommandLineParser/: CMakeLists.txt
test/NARUBitStream/: CMakeLists.txt
test/Wav/: CMakeLists.txt  main.cpp
test/byte_array/: CMakeLists.txt  main.cpp
test/command_line_parser/: CMakeLists.txt  main.cpp
test/lpc_calculator/: CMakeLists.txt  main.cpp
test/naru_bit_stream/: CMakeLists.txt  main.cpp
test/naru_coder/: CMakeLists.txt  main.cpp
test/naru_decoder/: CMakeLists.txt  main.cpp  naru_decode_processor_test.cpp  naru_decoder_test.cpp
test/naru_encode_decode/: CMakeLists.txt  main.cpp
test/naru_encoder/: CMakeLists.txt  main.cpp  naru_encode_processor_test.cpp  naru_encoder_test.cpp
test/naru_internal/: CMakeLists.txt  naru_internal_test.cpp  naru_utility_test.cpp
test/tmpdir/: main.cpp
test/wav/: CMakeLists.txt  main.cpp
tools/naru_codec/: CMakeLists.txt  naru_codec.c
tools/naru_player/: CMakeLists.txt  naru_player.c  naru_player.h  naru_player_coreaudio.c  naru_player_pulseaudio.c  naru_player_wasapi.c
