cmake_minimum_required(VERSION 3.1)

add_subdirectory(command_line_parser)
add_subdirectory(wav)
add_subdirectory(byte_array)
add_subdirectory(naru_internal)
add_subdirectory(naru_bit_stream)
add_subdirectory(naru_coder)
add_subdirectory(naru_encoder)
add_subdirectory(naru_decoder)
add_subdirectory(naru_encode_decode)
